--- a/defaults/templates/pages/index.html
+++ b/defaults/templates/pages/index.html
@@ -36,7 +36,7 @@
             <div class="mt-4">
                 <h3
                     class="text-2xl font-bold leading-tight text-brand-dark dark:text-stone-100 group-hover:text-brand-primary transition-colors">
-                    <a href="/{{ post.slug }}.html">
+                    <a href="/{{ post.slug }}">
                         <span class="absolute inset-0"></span>
                         {{ post.metadata.title }}
                     </a>
